--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -44,8 +44,8 @@
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
 							<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 일정관리' : '부서별 일정관리'}">부서별 일정관리</h6>
-						</a> <a th:href="@{/schedule/schWrite}" class="btn btn-sm btn-primary">일정
-							등록</a>
+						</a>
+						<a th:href="@{/schedule/schWrite}" class="btn btn-sm btn-primary">일정 등록</a>
 					</div>
 					<div class="collapse show" id="collapse2">
 						<div class="card-body">
@@ -66,18 +66,16 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="addScheduleModalLabel">간편 일정 등록</h5>
-						<button class="close" type="button" data-dismiss="modal"
-							aria-label="Close">
+						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">×</span>
 						</button>
 					</div>
 					<form th:action="@{/schedule/save}" method="post">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="modalAuthor">작성자</label> <input type="text"
-									class="form-control" id="modalAuthor" name="authorName"
-									readonly> <input type="hidden" id="modalEmpId"
-									name="empId">
+								<label for="modalAuthor">작성자</label>
+								<input type="text" class="form-control" id="modalAuthor" name="authorName" readonly>
+								<input type="hidden" id="modalEmpId" name="empId">
 							</div>
 							
 							<div class="form-group">
@@ -94,8 +92,8 @@
 							</div>
 
 							<div class="form-group">
-								<label for="modalTitle">일정 제목</label> <input type="text"
-									class="form-control" id="modalTitle" name="schTitle" required>
+								<label for="modalTitle">일정 제목</label>
+								<input type="text" class="form-control" id="modalTitle" name="schTitle" required>
 							</div>
 
 							<div class="form-group">
@@ -105,14 +103,13 @@
 							</div>
 
 							<div class="form-group">
-								<label for="modalStartDate">시작일</label> <input type="date"
-									class="form-control" id="modalStartDate" name="startDate"
-									required> 
+								<label for="modalStartDate">시작일</label>
+								<input type="date" class="form-control" id="modalStartDate" name="startDate" required> 
 							</div>
 
 							<div class="form-group">
-								<label for="modalEndDate">종료일</label> <input type="date"
-									class="form-control" id="modalEndDate" name="endDate" required>
+								<label for="modalEndDate">종료일</label>
+								<input type="date" class="form-control" id="modalEndDate" name="endDate" required>
 							</div>
 						</div>
 						<div class="modal-footer">
