--- a/bootstrap_stater/src/main/resources/templates/login.html
+++ b/bootstrap_stater/src/main/resources/templates/login.html
@@ -47,6 +47,7 @@
 										<h1 class="h4 text-gray-900 mb-4">심화반 ERP</h1>
 									</div>
 									<form class="user" method="post" action="/login">
+									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 										<div class="form-group">
 											<input type="text" class="form-control form-control-user"
 												name="empId" placeholder="사원번호를 입력하세요">
