--- a/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
@@ -88,6 +88,8 @@
 	</th:block>
 	<th:block layout:fragment="script">
 	<script>
+	let csrfToken = $("meta[name='_csrf']").attr("content");
+	let csrfHeader = $("meta[name='_csrf_header']").attr("content");
 	// 부서랑 날짜조회
 	document.getElementById("searchBtn").addEventListener("click", function() {
 	    const startDate = document.querySelector("input[name='startDate']").value;
@@ -108,6 +110,9 @@
 	            type: "POST",
 	            contentType: "application/json",
 	            data: JSON.stringify({}), // 기존 fetch에서 body 부분
+				beforeSend: function(xhr) { // AJAX 실제 요청 전 먼저 요청할 정보(주로 헤더정보)
+					xhr.setRequestHeader(csrfHeader, csrfToken)
+				},
 	            success: function(data) {
 	                if (data && data.checkInTime) {
 	                    const rawTime = data.checkInTime;
