--- a/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
@@ -127,8 +127,15 @@
 	</th:block>
 	<th:block layout:fragment="script">
 	<script>
-		
 // 		console.log("버튼 클릭!");
+		
+		let csrfToken = $("meta[name='_csrf']").attr("content");
+		let csrfHeader = $("meta[name='_csrf_header']").attr("content");
+		
+		$(document).ajaxSend(function(e, xhr, options) {
+		    xhr.setRequestHeader(csrfHeader, csrfToken);
+		});
+	
 		
 		// 부서랑 날짜조회
 		document.getElementById("searchBtn").addEventListener("click", function() {
